--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha 'src/**/*.spec.ts'",
+    "test:watch": "mocha 'src/**/*.spec.ts' --watch --watch-files src/**/*.ts",
     "build": "npm run build:server && npm run build:client",
     "build:client": "rollup -c",
     "build:server": "tsc src/webServer/main.ts --esModuleInterop --downlevelIteration --outDir build",
