--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "files.autoSave": "onFocusChange",
     "eslint.validate": [
         "typescript"
-    ]
+    ],
+    "[svelte]": {
+        "editor.defaultFormatter": "svelte.svelte-vscode"
+      },
 }
