--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'src/**/*.spec.ts'",
-    "test:watch": "mocha 'src/**/*.spec.ts' --watch --watch-files src/**/*.ts",
     "build": "npm run build:server && npm run build:client",
     "build:client": "rollup -c",
     "build:server": "tsc src/webServer/main.ts --esModuleInterop --downlevelIteration --outDir build",
+    "start": "node build/webServer/main.js",
+    "test": "mocha 'src/**/*.spec.ts'",
+    "test:watch": "mocha 'src/**/*.spec.ts' --watch --watch-files src/**/*.ts",
     "dev": "rollup -c -w",
-    "start:server": "node build/webServer/main.js",
-    "gcpCloudRun": "npm install && npm run start:server",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json --diagnostic-sources 'svelte,css'"
   },
   "repository": {
     "type": "git",
@@ -34,14 +33,9 @@
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
     "@google-cloud/datastore": "^6.6.2",
-    "@types/youtube": "^0.0.46",
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "pixi.js": "^6.3.0",
-    "sirv-cli": "^2.0.2",
-    "tmi.js": "^1.8.5",
-    "tone": "^14.7.77",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -55,6 +49,7 @@
     "@types/mocha": "^9.1.0",
     "@types/tmi.js": "^1.8.1",
     "@types/uuid": "^8.3.4",
+    "@types/youtube": "^0.0.46",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
@@ -65,6 +60,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "mocha": "^9.2.0",
+    "pixi.js": "^6.3.2",
     "postcss": "^8.4.6",
     "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
@@ -76,6 +72,8 @@
     "svelte-check": "^2.4.3",
     "svelte-preprocess": "^4.10.3",
     "tailwindcss": "^3.0.21",
+    "tmi.js": "^1.8.5",
+    "tone": "^14.7.77",
     "ts-node": "^10.5.0",
     "tslib": "^2.0.0",
     "typescript": "^4.5.5"
