--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
     "@google-cloud/datastore": "^6.6.2",
-    "@types/youtube": "^0.0.46",
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -50,6 +49,7 @@
     "@types/mocha": "^9.1.0",
     "@types/tmi.js": "^1.8.1",
     "@types/uuid": "^8.3.4",
+    "@types/youtube": "^0.0.46",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
@@ -72,6 +72,7 @@
     "svelte-check": "^2.4.3",
     "svelte-preprocess": "^4.10.3",
     "tailwindcss": "^3.0.21",
+    "tailwindcss-filters": "^3.0.0",
     "tmi.js": "^1.8.5",
     "tone": "^14.7.77",
     "ts-node": "^10.5.0",
